<resources>
    <string name="app_name">TheVisualArtsNotebookV3</string>
    <string name="visualArtsNotebook_screenTitle">Welcome to \nThe Visual Arts Notebook</string>
    <string name="loginButtonText">LOG IN</string>
    <string name="registerButtonText">REGISTER</string>
    <string name="logoDescriptionText">A Logo for the Virtual Arts Notebook</string>
    <string name="aboutButtonText">ABOUT</string>
    <string name="user_login_title">User Login</string>
    <string name="usernameLabelText">Username</string>
    <string name="passwordLabelText">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="back_button_text">Back</string>
    <string name="forgot_username_button_text">Forgot Username?</string>
    <string name="need_an_account_button_text">Need an Account?</string>
    <string name="register_an_account">Register an Account</string>
    <string name="enter_a_unique_username">Enter a Unique Username</string>
    <string name="your_email">Your Email</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="re_enter_your_password">Re-enter your Password</string>
    <string name="enter_a_password">Enter a Password</string>
    <string name="confirm_your_password">Confirm Your Password</string>
    <string name="sign_up">Sign Up</string>
</resources>