<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.528"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.049" />

    <TextView
        android:id="@+id/welcomeNotebookTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/visualArtsNotebook_screenTitle"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/virtualArtNotebookLogo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintTop_toTopOf="parent"
        tools:layout_marginBottom="40dp"
        tools:layout_marginTop="30dp" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="160dp"
        android:layout_height="65dp"
        android:layout_marginBottom="40dp"
        android:text="@string/loginButtonText"
        app:layout_constraintBottom_toTopOf="@id/registrationButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/virtualArtNotebookLogo" />

    <Button
        android:id="@+id/registrationButton"
        android:layout_width="160dp"
        android:layout_height="65dp"
        android:text="@string/registerButtonText"
        app:layout_constraintBottom_toTopOf="@id/aboutButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginButton"
        tools:layout_constraintTop_toBottomOf="@id/loginButton"
        tools:layout_marginBottom="35dp"
        tools:layout_marginTop="10dp" />

    <Button
        android:id="@+id/aboutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aboutButtonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registrationButton"
        tools:layout_constraintBottom_toBottomOf="parent"
        tools:layout_marginBottom="30dp"
        tools:layout_marginTop="100dp" />

    <ImageView
        android:id="@+id/virtualArtNotebookLogo"
        android:layout_width="253dp"
        android:layout_height="222dp"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/logoDescriptionText"
        app:layout_constraintBottom_toTopOf="@id/loginButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcomeNotebookTitle"
        app:srcCompat="@android:mipmap/sym_def_app_icon"
        tools:layout_marginTop="35dp" />

</androidx.constraintlayout.widget.ConstraintLayout>