<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/loginPageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/user_login_title"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/loginPageAppLogo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintRight_toRightOf="parent"
        tools:layout_marginBottom="30dp" />

    <TextView
        android:id="@+id/usernameFieldText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/usernameLabelText"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/usernameLoginBox"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginPageAppLogo"
        tools:layout_constraintBottom_toTopOf="@id/usernameLoginBox" />

    <EditText
        android:id="@+id/usernameLoginBox"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@id/passwordFieldText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/usernameFieldText"
        tools:layout_constraintBottom_toTopOf="@id/passwordFieldText"
        tools:layout_constraintTop_toBottomOf="@id/usernameFieldText"
        tools:minHeight="48dp" />

    <EditText
        android:id="@+id/loginPasswordInputBox"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@id/loginForgotUsernameButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordFieldText" />

    <TextView
        android:id="@+id/passwordFieldText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passwordLabelText"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/loginPasswordInputBox"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/usernameLoginBox" />

    <ImageView
        android:id="@+id/loginPageAppLogo"
        android:layout_width="189dp"
        android:layout_height="235dp"
        android:contentDescription="The Visual Arts Notebook Logo"
        app:layout_constraintBottom_toTopOf="@id/usernameFieldText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginPageTitle"
        app:srcCompat="@drawable/virtualartsnotebooklogo" />

    <Button
        android:id="@+id/loginForgotUsernameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_username_button_text"
        app:layout_constraintBottom_toTopOf="@id/loginForgotPasswordButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginPasswordInputBox" />

    <Button
        android:id="@+id/loginForgotPasswordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        app:layout_constraintBottom_toTopOf="@id/loginNeedAccountButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginForgotUsernameButton" />

    <Button
        android:id="@+id/loginNeedAccountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/need_an_account_button_text"
        app:layout_constraintBottom_toTopOf="@id/loginBackButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintTop_toBottomOf="@id/loginForgotPasswordButton" />

    <Button
        android:id="@+id/loginBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_button_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginNeedAccountButton"
        tools:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>